[package]
name = "limbus-mobile-manager"
version = "0.1.0"
description = "Limbus Mobile Manager"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0"

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "limbus_mobile_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
