[package]
name = "limbus-mobile-manager"
version = "0.1.0"
description = "Limbus Mobile Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "limbus_mobile_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
